2010-09-17 H. Doreau <henri.doreau@gmail.com>
	* Gateway.py: Added logging code to help debugging this code, executed
	remotely.

2010-09-14 H. Doreau <henri.doreau@gmail.com>
	* Communication.py: Added a new type of message to handle replies

	* tests/CommunicationTests.py: Updated tests to use this new class

	* Gateway.py: Added this runnable module that implements proxy mecanisms
	to perform command propagation.

	* test/GatewayTests.py: Added unit tests for Gateway module

2010-09-10 H. Doreau <henri.doreau@gmail.com>
	* Communication.py: Merged Channel and Driver classes to simplify the
	API. These two classes were always used together in the code.

2010-09-08 H. Doreau <henri.doreau@gmail.com>
	* Propagation.py: Added the ability to execute a command to a directly
	connected target.

2010-08-31 H. Doreau <henri.doreau@gmail.com>
	* Propagation.py: This module has been completely rewritten. It doesn't
	differenciate the topology nodes anymore, but simply use the topology
	tree to generate efficient routing tables. The router is much more
	efficient right now, and will behaves differently on each node.

	Also improved integration with the recent Communication module.

	* tests/PropagationTest.py: Also completely rewritten indeed.

2010-08-31 H. Doreau <henri.doreau@gmail.com>
	
	* Communication.py: Refactored the code to improve cleanliness and
	flexibility. The Messages are now implemented as small pieces of code,
	only defined by a type, and id and a few other attributes (according to
	their type). The (de)serialization can be done generically and in a
	simpler way, by the XMLReader itself.
	Also renamed some classes and changed the Driver interface to respect
	conventions.

	* test/CommunicationTests.py: updated the test to handle (100%
	coverage!) the changes.

	* Propagation.py: likewise

2010-08-26 H. Doreau <henri.doreau@gmail.com>
	* Communication.py: Added event based communication channels for